# INDUS_MIND

./: .gitleaks.toml  .pre-commit-config.yaml  05-SUPPLEMENT-MODULES.md  14-TESTING-GUIDE.md  CHANGES.md  GETTING_STARTED.md  README.md  TESTING.md  USER_GUIDE.md
BACKEND/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  Makefile  Readme.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  promote_admin.py  pyproject.toml
BACKEND/alembic/: env.py
BACKEND/alembic/versions/: 0001_initial.py  0002_auth.py  0003_users_rbac.py  0004_equipment.py  0005_documents.py  0006_chunks.py  0007_extraction_ai.py  0008_saved_searches.py  0009_chat_ai.py  0010_maintenance.py  0011_predictions_rca.py  0012_compliance.py  0013_intelligence.py  0014_settings_prefs_notifications.py  0015_ai_metering_meters.py  0016_dataops.py  0017_b18_integration.py  0018_b19_final.py
BACKEND/app/: __init__.py  main.py
BACKEND/app/api/v1/: router.py
BACKEND/app/common/: __init__.py  base.py  pagination.py  repository.py  responses.py  schemas.py
BACKEND/app/core/: config.py  database.py  deps.py  email.py  embeddings.py  events.py  exceptions.py  graph.py  llm.py  logging.py  mail.py  metrics.py  middleware.py  ocr.py  ratelimit.py  redis.py  security.py  storage.py
BACKEND/app/modules/ai/: ai_router.py  cache.py  chat_router.py  chat_service.py  copilot.py  evals.py  insights_service.py  models.py  observability_router.py  rca_agent.py  rca_router.py  repository.py  schemas.py  service.py
BACKEND/app/modules/analytics/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
BACKEND/app/modules/audit/: events.py  models.py  repository.py  router.py  schemas.py  service.py
BACKEND/app/modules/auth/: dependencies.py  events.py  models.py  oauth.py  permissions.py  repository.py  router.py  schemas.py  service.py  tokens.py
BACKEND/app/modules/bulk/: __init__.py  router.py
BACKEND/app/modules/compliance/: __init__.py  events.py  evidence.py  mapping_agent.py  models.py  parse_agent.py  repository.py  router.py  schemas.py  service.py
BACKEND/app/modules/content/: __init__.py  models.py  router.py
BACKEND/app/modules/dashboards/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py  widgets.py
BACKEND/app/modules/dataops/: __init__.py  export_registry.py  export_service.py  import_registry.py  import_service.py  models.py  parsing.py  report_registry.py  report_service.py  router.py  schemas.py
BACKEND/app/modules/documents/: events.py  models.py  providers.py  repository.py  router.py  schemas.py  service.py
BACKEND/app/modules/equipment/: events.py  models.py  providers.py  qr_router.py  repository.py  router.py  schemas.py  service.py
BACKEND/app/modules/i18n/: __init__.py  catalog.py  models.py  router.py  service.py
BACKEND/app/modules/ingestion/: chunking.py  entities_router.py  events.py  extraction.py  models.py  parsing.py  pipeline.py  repository.py  router.py  rules_catalog.py  rules_engine.py  rules_router.py  rules_schemas.py  rules_service.py  schemas.py  service.py  thumbnails.py
BACKEND/app/modules/integrations/: __init__.py  events.py  keys_service.py  models.py  router.py  schemas.py  webhooks_service.py
BACKEND/app/modules/knowledge/: models.py  providers.py  retrieval.py  router.py  schemas.py  search_router.py  search_service.py  service.py
BACKEND/app/modules/lessons/: __init__.py  agent.py  events.py  models.py  repository.py  router.py  schemas.py  service.py
BACKEND/app/modules/logbook/: __init__.py  models.py  router.py  schemas.py  service.py
BACKEND/app/modules/lookups/: catalog.py  events.py  models.py  repository.py  router.py  schemas.py  service.py
BACKEND/app/modules/maintenance/: ai_context.py  events.py  models.py  optimize.py  prediction_service.py  providers.py  repository.py  router.py  schemas.py  service.py  state_machine.py
BACKEND/app/modules/meters/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
BACKEND/app/modules/navigation/: __init__.py  router.py
BACKEND/app/modules/notifications/: __init__.py  events.py  models.py  repository.py  router.py  schemas.py  senders.py  service.py  templating.py
BACKEND/app/modules/onboarding/: __init__.py  catalog.py  models.py  router.py  schemas.py  service.py
BACKEND/app/modules/parts/: __init__.py  models.py  router.py  schemas.py  service.py
BACKEND/app/modules/preferences/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
BACKEND/app/modules/quality/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
BACKEND/app/modules/retention/: __init__.py  models.py  router.py  service.py
BACKEND/app/modules/settings/: __init__.py  catalog.py  format.py  models.py  repository.py  router.py  schemas.py  service.py
BACKEND/app/modules/tenants/: events.py  models.py  repository.py  schemas.py  service.py
BACKEND/app/modules/users/: catalog.py  events.py  models.py  repository.py  router.py  schemas.py  service.py
BACKEND/app/workers/: celery_app.py
BACKEND/app/workers/tasks/: compliance_tasks.py  dataops_tasks.py  equipment_tasks.py  ingestion_tasks.py  integration_tasks.py  onboarding_tasks.py  retention_tasks.py  scheduler_tasks.py
BACKEND/app/ws/: manager.py  progress.py  router.py
BACKEND/evals/: benchmark_questions.yaml  run_eval.py
BACKEND/seeds/: rebuild_graph.py  sample_data.py  seed.py
BACKEND/tests/: authz.py  conftest.py  test_ai.py  test_audit_coverage.py  test_auth.py  test_authz_matrix.py  test_b12_intelligence.py  test_b15_settings_prefs_notifications.py  test_b16_ai_meters.py  test_b17_dataops.py  test_b18_extraction_rules.py  test_b18_integrations.py  test_b18_onboarding.py  test_b19_final.py  test_compliance.py  test_documents.py  test_equipment.py  test_ingestion.py  test_knowledge.py  test_llm_providers.py  test_logging_privacy.py  test_maintenance.py  test_pipeline_golden.py  test_predictions_rca.py  test_search.py  test_smoke.py  test_users.py
DOCS/: 00-MASTER-PLAN.md  01-FRONTEND-DOCUMENTATION.md  (+4 more)
(+102 files in other folders)
