[project]
name = "indusmind-backend"
version = "0.1.0"
description = "IndusMind — AI-Powered Industrial Knowledge Intelligence Platform (backend)"
requires-python = ">=3.11,<3.12"
dependencies = [
    # web
    "fastapi>=0.111,<0.116",
    "uvicorn[standard]>=0.30,<0.35",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    # settings / validation
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "email-validator>=2.1",
    # db
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3.0",
    # infra clients
    "redis>=5.0",
    "neo4j>=5.20",
    "boto3>=1.34",
    "botocore>=1.34",
    # tasks
    "celery>=5.4,<6",
    # observability
    "structlog>=24.1",
    # security
    "pyjwt[crypto]>=2.8",
    "argon2-cffi>=23.1",
    "cryptography>=42.0",
    "pyotp>=2.9",
    "authlib>=1.3",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "ruff>=0.5",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["B008"]  # FastAPI Depends() in defaults

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true
