[project]
name = "indusmind-backend"
version = "0.1.0"
description = "IndusMind — AI-Powered Industrial Knowledge Intelligence Platform (backend)"
requires-python = ">=3.11,<3.12"
dependencies = [
    # web
    "fastapi>=0.111,<0.116",
    "uvicorn[standard]>=0.30,<0.35",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    # settings / validation
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "email-validator>=2.1",
    # db
    "sqlalchemy[asyncio]>=2.0.30,<2.1",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3.0",
    # infra clients
    "redis>=5.0",
    "neo4j>=5.20",
    "boto3>=1.34",
    "botocore>=1.34",
    # tasks
    "celery>=5.4,<6",
    # ingestion pipeline — document parsing / thumbnails / sample-data generation
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "extract-msg>=0.48",
    "reportlab>=4.2",
    "Pillow>=10.3",
    # observability
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "sentry-sdk[fastapi,celery]>=2.8",
    # Equipment QR labels (docs/08 N2) — small, pure-Python, needs Pillow (present).
    "qrcode>=7.4",
    # Admin-authored extraction patterns (docs/05 S7) run under a wall-clock
    # timeout. Stdlib `re` cannot do this: it holds the GIL for the whole match, so
    # it is uninterruptible and a catastrophic backtracker wedges the process.
    # `regex` enforces the timeout inside its matching loop. Not swappable for `re`.
    "regex>=2024.0",
    # config / eval question files
    "pyyaml>=6.0",
    # notification / report templating (sandboxed rendering of DB-authored templates)
    "jinja2>=3.1",
    # scheduling
    "croniter>=2.0",
    # security
    "pyjwt[crypto]>=2.8",
    "argon2-cffi>=23.1",
    "cryptography>=42.0",
    "pyotp>=2.9",
    "authlib>=1.3",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
# Packages that need system libraries and so can block a plain `pip install` on a
# fresh machine (WeasyPrint wants GTK/cairo/pango; python-magic wants libmagic).
# Both are lazy-imported behind a working fallback — reports render via ReportLab
# and MIME sniffing is skipped — so the app runs fully without them. The Docker
# images install the native libs and this extra; local dev usually shouldn't.
native = [
    "weasyprint>=61.0",   # branded HTML→PDF reports (falls back to ReportLab)
    "python-magic>=0.4.27",  # MIME sniffing from bytes (falls back to skipping)
]
# Hosted-LLM SDKs. Deliberately NOT base dependencies: every provider in
# core/llm.py lazy-imports its SDK and falls back to MockProvider when the key
# is absent, so a stock local install runs the whole app (ingestion, search,
# CRUD) with none of these present. Install only the one you have a key for —
# `pip install -e ".[ai]"` pulls all of them. Grok needs no SDK of its own: xAI
# speaks the OpenAI dialect, so the `openai` client covers it.
ai = [
    "anthropic>=0.34",
    "openai>=1.40",     # also serves LLM_PROVIDER=grok via grok_base_url
    "google-genai>=1.0",  # LLM_PROVIDER=gemini
]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "ruff>=0.5",
    "mypy>=1.10,<2",  # pin the major: a new mypy release must not break CI
    "types-PyYAML>=6.0",
    "types-croniter>=2.0",
]
# Heavy local models — installed only in the worker image (Dockerfile.worker).
ml = [
    "sentence-transformers>=3.0",  # bge-large-en-v1.5 embeddings
    "paddleocr>=2.7",              # scanned-page OCR (pytesseract is the fallback)
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
# 120, not 100: the code was written to a ~120 norm (actual max was 115) and E501
# is now ENFORCED (see [tool.ruff.lint].ignore — it is no longer suppressed).
# Wrapping the 282 lines that sat 1–15 chars over 100 would have been pure churn
# that read worse (ternaries and Cypher literals split badly), and `ruff format`
# was rejected: it reflows the compact prompt/seed tables one-field-per-line and
# still left 54 unsplittable lines. A gate at the length the code actually lives
# at catches real offenders; a gate nobody can pass gets switched off.
line-length = 120
target-version = "py311"
extend-exclude = ["alembic/versions"]  # autogenerated migrations

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = [
    "B008",  # FastAPI Depends() in defaults
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
warn_unused_ignores = true
